dark mode and spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,10 @@
-:root {
-	--bg-color: #fff9f9;
-	--text-color: #333;
-}
-
 .soc-bgContainer {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: var(--bg-color);
+	background-color: var(--background-primary);
 	z-index: 1000;
 	display: flex;
 	flex-direction: column;
@@ -26,23 +21,28 @@
 	font-family: monospace;
 	overflow: hidden;
 	white-space: nowrap;
-	font-size: 3em;
+	font-size: 2.5em;
 	direction: rtl;
-	color: var(--text-color);
+	color: var(--text-normal);
 }
 
-.soc-fadeOverlay {
+.soc-centeredContainer::after {
+	content: "";
 	position: absolute;
 	top: 0;
-	left: 0;
+	right: 0;
 	width: 100%;
 	height: 100%;
 	background: linear-gradient(
 		to right,
-		var(--bg-color) 0%,
-		transparent 50%,
+		var(--background-primary) 0%,
+		transparent 80%,
 		transparent 100%
 	);
+}
+
+.soc-text {
+	white-space: pre;
 }
 
 .soc-cursor {
@@ -54,6 +54,6 @@
 	padding-left: 2px;
 }
 
-.soc-cursor-on {
-	background-color: var(--text-color);
+.soc-cursorVisible {
+	background-color: var(--text-normal);
 }
